// Sigurna dob — database model (final project)
// Aligned with EF Core migrations and application implementation
// DBML: https://dbml.dbdiagram.io/docs
//
// Business rules enforced in the APP (not in the database):
// - Admission pending: room is optional
// - Active: must have an assigned room
// - Temporarily absent: may keep a room (counts toward occupancy)
// - Moved out / Archived: no active room assignment
// - Room occupancy = calculated from capacity and assignments, not a stored field
// - A resident does not have an AppUser account
// - AppUser may have 0 or 1 business profile: Employee OR FamilyContact (not both)
// - Admin may exist only as AppUser + role, without employee_id or family_contact_id
// - Records with history are archived, not physically deleted

// ─── Lookup tables (seed required) ─────────────────────────────────

Table resident_statuses {
  id integer [primary key, increment]
  name varchar(100) [not null, unique]
  note varchar(255)
}

Table room_statuses {
  id integer [primary key, increment]
  name varchar(100) [not null, unique]
  note varchar(255)
}

Table employee_positions {
  id integer [primary key, increment]
  name varchar(100) [not null, unique]
  note varchar(255)
}

Table employee_statuses {
  id integer [primary key, increment]
  name varchar(100) [not null, unique]
  note varchar(255)
}

Table care_task_types {
  id integer [primary key, increment]
  name varchar(100) [not null, unique]
  note varchar(255)
}

Table care_task_statuses {
  id integer [primary key, increment]
  name varchar(100) [not null, unique]
  note varchar(255)
}

Table visit_request_statuses {
  id integer [primary key, increment]
  name varchar(100) [not null, unique]
  note varchar(255)
}

Table activity_types {
  id integer [primary key, increment]
  name varchar(100) [not null, unique]
  note varchar(255)
}

// Seed resident_statuses: admission pending, active, temporarily absent, moved out, archived
// Seed room_statuses: in use, maintenance, out of service
// Seed care_task_types: therapy, nutrition, hygiene, escort, administrative
// Seed care_task_statuses: new, assigned, in progress, completed, cancelled
// Seed visit_request_statuses: received, approved, rejected, held, cancelled
// Seed activity_types: social, creative, exercise, educational, outing
// Seed employee_positions: coordinator, caregiver
// Seed employee_statuses: active, inactive

// ─── Auth ───────────────────────────────────────────────────────────

Table app_roles {
  id integer [primary key, increment]
  name varchar(50) [not null, unique]
  display_name varchar(100) [not null]
}

Table app_users {
  id integer [primary key, increment]
  email varchar(256) [not null, unique]
  display_name varchar(200) [not null]
  password_hash varchar(500) [not null]
  is_active boolean [not null, default: true]
  employee_id integer [null, unique]
  family_contact_id integer [null, unique]
  created_at datetime [not null, default: `now()`]
}

// employee_id and family_contact_id are nullable — a profile is optional
// Examples:
//   Admin without profile: employee_id=null, family_contact_id=null, role Admin
//   Coordinator:           employee_id=1,    family_contact_id=null, role Coordinator
//   Caregiver:             employee_id=2,    family_contact_id=null, role Caregiver
//   Family member:         employee_id=null, family_contact_id=3,    role FamilyMember
// App validation: both FKs must not be set at the same time

Table app_user_roles {
  app_user_id integer [not null]
  app_role_id integer [not null]

  indexes {
    (app_user_id, app_role_id) [pk]
  }
}

// Seed app_roles: User, Admin, Coordinator, Caregiver, FamilyMember
// Admin is a role, not a separate table
// Residents do not have AppUser accounts

// ─── Business profiles ──────────────────────────────────────────────

Table employees {
  id integer [primary key, increment]
  first_name varchar(100) [not null]
  last_name varchar(100) [not null]
  employee_code varchar(50) [unique]
  phone varchar(50)
  email varchar(256)
  employee_position_id integer [not null]
  employee_status_id integer [not null]
  hired_at date
  note varchar(500)
}

Table rooms {
  id integer [primary key, increment]
  name varchar(50) [not null, unique]
  capacity integer [not null]
  room_status_id integer [not null]
  note varchar(500)
}

Table residents {
  id integer [primary key, increment]
  first_name varchar(100) [not null]
  last_name varchar(100) [not null]
  date_of_birth date
  personal_id varchar(50)
  resident_status_id integer [not null]
  room_id integer [null]
  admitted_at date
  archived_at datetime [null]
  note varchar(1000)
}

Table family_contacts {
  id integer [primary key, increment]
  resident_id integer [not null]
  first_name varchar(100) [not null]
  last_name varchar(100) [not null]
  relationship varchar(100)
  phone varchar(50)
  email varchar(256)
  note varchar(500)
}

// ─── Care tasks ─────────────────────────────────────────────────────

Table care_tasks {
  id integer [primary key, increment]
  title varchar(200) [not null]
  description varchar(2000)
  resident_id integer [not null]
  care_task_type_id integer [not null]
  care_task_status_id integer [not null]
  coordinator_id integer [not null]
  caregiver_id integer [null]
  due_at datetime
  started_at datetime [null]
  completed_at datetime [null]
  completion_note varchar(2000) [null]
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]
}

// caregiver_id null = unassigned task before caregiver assignment
// Completed requires completed_at + completion_note (app validation)
// History rows remain in the table; no physical DELETE

// ─── Change history (AddChangeHistory migration) ────────────────────

Table resident_status_histories {
  id integer [primary key, increment]
  resident_id integer [not null]
  from_status_id integer [null]
  to_status_id integer [not null]
  changed_at datetime [not null, default: `now()`]
  changed_by_app_user_id integer [null]
  changed_by_name varchar(200) [not null]
}

// Records resident status changes (e.g. admission pending → active)
// changed_by_app_user_id is audit metadata without a required FK to app_users

Table care_task_change_histories {
  id integer [primary key, increment]
  care_task_id integer [not null]
  change_type varchar(50) [not null]
  from_status_id integer [null]
  to_status_id integer [null]
  from_caregiver_id integer [null]
  to_caregiver_id integer [null]
  changed_at datetime [not null, default: `now()`]
  changed_by_app_user_id integer [null]
  changed_by_name varchar(200) [not null]
}

// change_type: Status | Assignment
// Records care task status changes or caregiver reassignments

// Note: calendar, room occupancy, caregiver workload, and AI features
// reuse existing tables — no additional migrations beyond AddChangeHistory.

// ─── Visits ─────────────────────────────────────────────────────────

Table visit_requests {
  id integer [primary key, increment]
  resident_id integer [not null]
  family_contact_id integer [not null]
  coordinator_id integer [null]
  visit_request_status_id integer [not null]
  requested_at datetime [not null, default: `now()`]
  requested_visit_at datetime [not null]
  decided_at datetime [null]
  held_at datetime [null]
  decision_note varchar(1000) [null]
  updated_at datetime [not null, default: `now()`]
}

// FamilyMember (AppUser) submits the request; Coordinator approves/rejects/records held visit

// ─── Activities (N:M) ───────────────────────────────────────────────

Table activities {
  id integer [primary key, increment]
  title varchar(200) [not null]
  description varchar(2000)
  activity_type_id integer [not null]
  starts_at datetime [not null]
  ends_at datetime [null]
  location varchar(200)
  coordinator_id integer [null]
  updated_at datetime [not null, default: `now()`]
}

Table resident_activities {
  resident_id integer [not null]
  activity_id integer [not null]
  enrolled_at datetime [not null, default: `now()`]
  note varchar(500)

  indexes {
    (resident_id, activity_id) [pk]
  }
}

// ─── Documents and images on resident profile ───────────────────────

Table resident_media {
  id integer [primary key, increment]
  resident_id integer [not null]
  original_file_name varchar(255) [not null]
  stored_file_name varchar(255) [not null]
  stored_path varchar(500) [not null]
  content_type varchar(100) [not null]
  file_size_bytes bigint [not null]
  media_type varchar(20) [not null]
  caption varchar(500)
  uploaded_at datetime [not null, default: `now()`]
}

// media_type: Document | Image
// content_type: application/pdf, image/jpeg, image/png, ...
// Upload: securely generated stored_file_name + metadata in the database

// ─── References (FK > PK) ───────────────────────────────────────────

Ref: employees.employee_position_id > employee_positions.id
Ref: employees.employee_status_id > employee_statuses.id

Ref: rooms.room_status_id > room_statuses.id

Ref: residents.resident_status_id > resident_statuses.id
Ref: residents.room_id > rooms.id

Ref: family_contacts.resident_id > residents.id

Ref: app_users.employee_id > employees.id
Ref: app_users.family_contact_id > family_contacts.id

Ref: app_user_roles.app_user_id > app_users.id
Ref: app_user_roles.app_role_id > app_roles.id

Ref: care_tasks.resident_id > residents.id
Ref: care_tasks.care_task_type_id > care_task_types.id
Ref: care_tasks.care_task_status_id > care_task_statuses.id
Ref: care_tasks.coordinator_id > employees.id
Ref: care_tasks.caregiver_id > employees.id

Ref: resident_status_histories.resident_id > residents.id
Ref: resident_status_histories.from_status_id > resident_statuses.id
Ref: resident_status_histories.to_status_id > resident_statuses.id

Ref: care_task_change_histories.care_task_id > care_tasks.id
Ref: care_task_change_histories.from_status_id > care_task_statuses.id
Ref: care_task_change_histories.to_status_id > care_task_statuses.id
Ref: care_task_change_histories.from_caregiver_id > employees.id
Ref: care_task_change_histories.to_caregiver_id > employees.id

Ref: visit_requests.resident_id > residents.id
Ref: visit_requests.family_contact_id > family_contacts.id
Ref: visit_requests.coordinator_id > employees.id
Ref: visit_requests.visit_request_status_id > visit_request_statuses.id

Ref: activities.activity_type_id > activity_types.id
Ref: activities.coordinator_id > employees.id

Ref: resident_activities.resident_id > residents.id
Ref: resident_activities.activity_id > activities.id

Ref: resident_media.resident_id > residents.id
